syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

import "Protos/sharedDefinitions.proto";

option csharp_namespace = "DeviceManager.Core.Proto";

service LocationGrpcService {
  rpc GetAllLocations (GenericGetManyRequest) returns (GetAllLocationsResponse);
  rpc GetLocation (GenericGetRequest) returns (LocationResourceExtended);

  rpc CreateLocation (CreateLocationRequest) returns (LocationResource);
  rpc UpdateLocation (UpdateLocationRequest) returns (LocationResource);
  rpc DeleteLocation (GenericDeleteRequest) returns (google.protobuf.Empty);
}

message GetAllLocationsResponse {
  repeated LocationResourceExtended Locations = 1;
  PaginationMetaData MetaData = 2;
}

message CreateLocationRequest {
  string Name = 1;
  string UserId = 2;

  // Properties
  google.protobuf.StringValue DisplayName = 3;
  google.protobuf.FloatValue Latitude = 4;
  google.protobuf.FloatValue Longitude = 5;
}

message UpdateLocationRequest {
  int32 Id = 1;

  // Properties
  google.protobuf.StringValue DisplayName = 2;
  google.protobuf.FloatValue Latitude = 3;
  google.protobuf.FloatValue Longitude = 4;

  // allow only owner of the location to update it
  string UserId = 8;
}

